fix z-index of alerts

--- a/project/static/css/base.css
+++ b/project/static/css/base.css
@@ -20,3 +20,7 @@ body {
 nav {
     z-index: 1;
 }
+
+.alert {
+    z-index: 1;
+}
